errori.txt
sara@gianni:~/Dropbox/Sistemi operativi/umpsss/examples/phase1$ mipsel-linux-gnu-gcc -ansi -mips1 -mfp32 -std=c99 -I/usr/local/include/umps2 -c pcb.c
pcb.c:12:1: error: unknown type name ‘HIDDEN’
 HIDDEN LIST_HEAD(pcbFree_h); //Macro di listx.h: inizializza la sentinella alla pcbFree. pcbFree_h è la sentinella della coda di pcb
 ^~~~~~
pcb.c:12:1: warning: parameter names (without types) in function declaration
pcb.c:15:7: error: expected ‘;’ before ‘void’
 HIDDEN void initPcbs(void);
       ^~~~~
       ;
pcb.c:25:7: error: expected ‘;’ before ‘void’
 HIDDEN void initPcbs(void){
       ^~~~~
       ;
pcb.c: In function ‘initPcbs’:
pcb.c:26:2: error: unknown type name ‘HIDDEN’
  HIDDEN pcb_t pcbFree_table[MAXPROC]; //Array statico contenente MAX_PROC pcb_t
  ^~~~~~
pcb.c:26:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘pcbFree_table’
  HIDDEN pcb_t pcbFree_table[MAXPROC]; //Array statico contenente MAX_PROC pcb_t
               ^~~~~~~~~~~~~
pcb.c:27:18: error: ‘MAXPROC’ undeclared (first use in this function)
  for (int i=0; i<MAXPROC; i++){
                  ^~~~~~~
pcb.c:27:18: note: each undeclared identifier is reported only once for each function it appears in
pcb.c:28:3: error: unknown type name ‘pcb_t’
   pcb_t* newPcb = &pcbFree_table[i]; //Mette in newPcp l'iesimo elemento della tabella dei pcb
   ^~~~~
pcb.c:28:20: error: ‘pcbFree_table’ undeclared (first use in this function)
   pcb_t* newPcb = &pcbFree_table[i]; //Mette in newPcp l'iesimo elemento della tabella dei pcb
                    ^~~~~~~~~~~~~
pcb.c:29:3: warning: implicit declaration of function ‘list_add_tail’ [-Wimplicit-function-declaration]
   list_add_tail(&(newPcb->p_next), &(pcbFree_h));  //Aggiunge l'elemento in coda alla lista pcbFree
   ^~~~~~~~~~~~~
pcb.c:29:25: error: request for member ‘p_next’ in something not a structure or union
   list_add_tail(&(newPcb->p_next), &(pcbFree_h));  //Aggiunge l'elemento in coda alla lista pcbFree
                         ^~
pcb.c:29:38: error: ‘pcbFree_h’ undeclared (first use in this function)
   list_add_tail(&(newPcb->p_next), &(pcbFree_h));  //Aggiunge l'elemento in coda alla lista pcbFree
                                      ^~~~~~~~~
pcb.c: At top level:
pcb.c:34:7: error: expected ‘;’ before ‘void’
 HIDDEN void freePcb(pcb_t *p){
       ^~~~~
       ;
pcb.c:34:21: error: unknown type name ‘pcb_t’
 HIDDEN void freePcb(pcb_t *p){
                     ^~~~~
pcb.c:40:1: error: unknown type name ‘HIDDEN’
 HIDDEN pcb_t *allocPcb(void){
 ^~~~~~
pcb.c:40:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 HIDDEN pcb_t *allocPcb(void){
              ^
pcb.c:67:7: error: expected ‘;’ before ‘void’
 HIDDEN void mkEmptyProcQ(struct list_head *head){
       ^~~~~
       ;
pcb.c:67:33: warning: ‘struct list_head’ declared inside parameter list will not be visible outside of this definition or declaration
 HIDDEN void mkEmptyProcQ(struct list_head *head){
                                 ^~~~~~~~~
pcb.c: In function ‘mkEmptyProcQ’:
pcb.c:69:2: warning: implicit declaration of function ‘INIT_LIST_HEAD’; did you mean ‘LIST_HEAD’? [-Wimplicit-function-declaration]
  INIT_LIST_HEAD(head);
  ^~~~~~~~~~~~~~
  LIST_HEAD
pcb.c: At top level:
pcb.c:74:7: error: expected ‘;’ before ‘int’
 HIDDEN int emptyProcQ(struct list_head *head){
       ^~~~
       ;
pcb.c:74:30: warning: ‘struct list_head’ declared inside parameter list will not be visible outside of this definition or declaration
 HIDDEN int emptyProcQ(struct list_head *head){
                              ^~~~~~~~~
pcb.c: In function ‘emptyProcQ’:
pcb.c:75:9: warning: implicit declaration of function ‘list_empty’ [-Wimplicit-function-declaration]
  return list_empty(head); //list_empty restituisce proprio questi valori.
         ^~~~~~~~~~
pcb.c: At top level:
pcb.c:82:7: error: expected ‘;’ before ‘void’
 HIDDEN void insertProcQ(struct list_head *head, pcb_t *p){
       ^~~~~
       ;
pcb.c:82:49: error: unknown type name ‘pcb_t’
 HIDDEN void insertProcQ(struct list_head *head, pcb_t *p){
                                                 ^~~~~
pcb.c:97:1: error: unknown type name ‘HIDDEN’
 HIDDEN pcb_t *headProcQ(struct list_head *head){
 ^~~~~~
pcb.c:97:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 HIDDEN pcb_t *headProcQ(struct list_head *head){
              ^
pcb.c:107:1: error: unknown type name ‘HIDDEN’
 HIDDEN pcb_t *removeProcQ(struct list_head *head){
 ^~~~~~
pcb.c:107:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 HIDDEN pcb_t *removeProcQ(struct list_head *head){
              ^
pcb.c:119:1: error: unknown type name ‘HIDDEN’
 HIDDEN pcb_t *outProcQ(struct list_head *head, pcb_t *p){
 ^~~~~~
pcb.c:119:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 HIDDEN pcb_t *outProcQ(struct list_head *head, pcb_t *p){
              ^
pcb.c:135:7: error: expected ‘;’ before ‘int’
 HIDDEN int emptyChild(pcb_t *this){
       ^~~~
       ;
pcb.c:135:23: error: unknown type name ‘pcb_t’
 HIDDEN int emptyChild(pcb_t *this){
                       ^~~~~
pcb.c:140:7: error: expected ‘;’ before ‘void’
 HIDDEN void insertChild(pcb_t *prnt, pcb_t *p){
       ^~~~~
       ;
pcb.c:140:25: error: unknown type name ‘pcb_t’
 HIDDEN void insertChild(pcb_t *prnt, pcb_t *p){
                         ^~~~~
pcb.c:140:38: error: unknown type name ‘pcb_t’
 HIDDEN void insertChild(pcb_t *prnt, pcb_t *p){
                                      ^~~~~
pcb.c:147:1: error: unknown type name ‘HIDDEN’
 HIDDEN pcb_t *removeChild(pcb_t *p){
 ^~~~~~
pcb.c:147:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 HIDDEN pcb_t *removeChild(pcb_t *p){
              ^
pcb.c:162:1: error: unknown type name ‘HIDDEN’
 HIDDEN pcb_t *outChild(pcb_t *p){
 ^~~~~~
pcb.c:162:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
 HIDDEN pcb_t *outChild(pcb_t *p){
              ^
sara@gianni:~/Dropbox/Sistemi operativi/umpsss/examples/phase1$ 
